Track 1 - Infrastructure Automation/Week 5 - Belt Exam 1/Day5/code/Terraform module/Terraform-project/Application-module/vpc.tf
# Define the security group for public subnet
resource "aws_security_group" "sgweb" {
  name        = "vpc"
  description = "Allow incoming HTTP connections & SSH access"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "custom SG"
  }
}
